--- a/cog.yaml
+++ b/cog.yaml
@@ -4,8 +4,8 @@ build:
   python_version: "3.11"
   python_packages:
     - "omegaconf==2.3.0"
-    - "torch==2.0.1"
-    - "torchvision==0.15.2"
+    - "torch"
+    - "torchvision"
     - "transformers==4.26.1"
     - "diffusers==0.20.2"
     - "accelerate==0.21.0"
