--- a/cog.yaml
+++ b/cog.yaml
@@ -1,11 +1,11 @@
-# Configuration for Cog
 build:
   gpu: true
+  cuda: "11.8"
   python_version: "3.11"
   python_packages:
     - "omegaconf==2.3.0"
-    - "torch"
-    - "torchvision"
+    - "torch==2.0.1"
+    - "torchvision==0.15.2"
     - "transformers==4.26.1"
     - "diffusers==0.20.2"
     - "accelerate==0.21.0"
